2009-07-05  David Moore  <dcm@acm.org>

	* NEWS, configure.in, libiptcdata.spec.in: Updated for release of 1.0.4

2009-06-27  David Moore  <dcm@acm.org>

	* docs/reference/libiptcdata-docs.sgml: Fix multilib -devel rpm conflict
	* iptc/po/it.po: Additional Italian translation from Milo Casagrande.

2009-06-10  David Moore  <dcm@acm.org>

	* po/it.po: Added Italian translation from Milo Casagrande.

2009-03-24  David Moore  <dcm@acm.org>

	* NEWS, configure.in, libiptcdata.spec.in: Updated for release of 1.0.3
	* Makefile.am: Fix "make distcheck"
	* python/pyiptcdata.c: Updated save patch from Chris Mayo.
	* po/de.po, iptc/po/de.po: Added German translation, submitted by
	Chris Leick.
	* libiptcdata/iptc-dataset.c: Check for NULL tag name in
	iptc_dataset_dump.  From Roger Hakansson.

2008-12-08  Ian Wienand  <ianw@debian.org>

	* python/pyiptcdataset.c: Don't poke around inside datastructures
	for title/description info.

2007-09-04  David Moore  <dcm@acm.org>

	* python/pyiptcdata.c: Fix for saving when /tmp is on different
	filesystem.  Patch from Chris Mayo.

2007-05-15  David Moore  <dcm@acm.org>

	* NEWS, configure.in: Updated for release of 1.0.2

2007-05-15  Ian Wienand  <ianw@debian.org>

	* python/Makefile.am, python/pyiptcdata.h : fix to use headers
	out of build tree

2007-05-15  David Moore  <dcm@acm.org>

	* libiptcdata/iptc-jpeg.c: Store APP13 section closer to the start of
	the file, necessary for Picasa compatability.
	* iptc/main.c: Don't set version and encoding by default since it hurts
	Picasa compatability.  Added two options to set them manually.
	* python/pyiptcdata.c: Don't set version and encoding by default.
	* Documentation updates for these new recommendations

2007-03-23  David Moore  <dcm@acm.org>

	* NEWS, configure.in: Updated for release of 1.0.1
	* python/pyiptcdatamod.c: Fixed buffer overflow
	* python/Makefile.am: added -avoid-version argument to libtool
	* README: converted from ISO-8859-1 to UTF-8