@@ -1,4 +1,6 @@
-%{!?python_sitearch: %define python_sitearch %(%{__python} -c "from distutils.sysconfig import get_python_lib; print get_python_lib(1)")}
+%if 0%{?rhel} <= 5
+%{!?python_sitearch: %global python_sitearch %(%{__python} -c "from distutils.sysconfig import get_python_lib; print(get_python_lib(1))")}
+%endif
 
 Name: @PACKAGE@
 Version: @VERSION@
@@ -26,7 +28,6 @@ Summary: Headers and libraries for libiptcdata application development
 Group: Development/Libraries
 Requires: %{name} = %{version}-%{release}
 Requires: pkgconfig
-Requires: gtk-doc
 
 %description devel
 The libiptcdata-devel package contains the libraries and include files
@@ -84,6 +85,21 @@ rm -rf $RPM_BUILD_ROOT
 %{python_sitearch}/*.so
 
 %changelog
+* Wed Nov 16 2011 David Moore <david.moore@gmail.com> 1.0.4-5
+- Removed 'Requires: gtk-doc', updated python sitearch.
+
+* Tue Feb 08 2011 Fedora Release Engineering <rel-eng@lists.fedoraproject.org> - 1.0.4-4
+- Rebuilt for https://fedoraproject.org/wiki/Fedora_15_Mass_Rebuild
+
+* Wed Jul 21 2010 David Malcolm <dmalcolm@redhat.com> - 1.0.4-3
+- Rebuilt for https://fedoraproject.org/wiki/Features/Python_2.7/MassRebuild
+
+* Fri Jul 24 2009 Fedora Release Engineering <rel-eng@lists.fedoraproject.org> - 1.0.4-2
+- Rebuilt for https://fedoraproject.org/wiki/Fedora_12_Mass_Rebuild
+
+* Sun Jul 05 2009 David Moore <dcm@acm.org> 1.0.4-1
+- New upstream version
+
 * Sun Apr 12 2009 David Moore <dcm@acm.org> 1.0.3-3
 - Added 'BuildRequires: gtk-doc'
 
